--- a/AspNetCoreBootstrap4/Views/_ViewImports.cshtml
+++ b/AspNetCoreBootstrap4/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using AspNetCoreBootstrap4
 @using AspNetCoreBootstrap4.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, AspNetCoreBootstrap4
